# bookmarks-converter

./: .gitignore  LICENSE  README.md  bookmarks_file_structure.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  combine-prs.yml
data/: bookmarks_chrome.html  bookmarks_chrome.json  bookmarks_firefox.html  bookmarks_firefox.json  from_chrome_html.db  from_chrome_html.json  from_chrome_json.db  from_chrome_json.html  from_firefox_html.db  from_firefox_html.json  from_firefox_json.db  from_firefox_json.html
src/bookmarks_converter/: __init__.py  cli.py  core.py  formats.py  models.py  util.py
src/bookmarks_converter/converters/: __init__.py  bookmarkie.py  chrome.py  converter.py  firefox.py
src/cli/: __main__.py  core.py
tests/: conftest.py  test_Bookmark.py  test_HTMLBookmark.py  test_JSONBookmark.py  test_NodeMixin.py  test_bookmarkie.py  test_bookmarks_converter.py  test_chrome.py  test_cli.py  test_converter.py  test_firefox.py  test_formats.py  test_model.py  test_util.py
tests/resources/: bookmarks_bookmarkie.db  bookmarks_bookmarkie.html  bookmarks_bookmarkie.json  bookmarks_bookmarkie.py  bookmarks_bookmarkie_formatted.html  bookmarks_bookmarkie_unindented.html  bookmarks_chrome.html  bookmarks_chrome.json  bookmarks_chrome.py  bookmarks_firefox.html  bookmarks_firefox.json  bookmarks_firefox.py  bookmarks_firefox_formatted.html  bookmarks_firefox_unindented.html  bookmarks_firefox_with_separator.json
