[tool.poetry]
name = "bookmarks-converter"
version = "0.3.0"
description = "Parse db/html/json bookmarks file from (Chrome - Firefox - Custom source) and convert it to db/html/json format."
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/radam9/bookmarks-converter"
repository = "https://github.com/radam9/bookmarks-converter"
keywords = [
    "bookmarks", 
    "bookmarks converter", 
    "bookmarks-converter", 
    "bookmarks-parser", 
    "bookmarks parser"
    ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
    ]
packages = [
    { include = "bookmarks_converter", from = "src" },
    ]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.10.0"
SQLAlchemy = "^1.4.31"
importlib-metadata = {version = ">=1,<5", python = "<3.8"}

[tool.poetry.dev-dependencies]
pylint = "^2.12.0"
pytest = "^7.0.1"
black = "^22.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.poetry.scripts]
bookmarks-converter = "bookmarks_converter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
