[tool.poetry]
name = "bookmarks-converter"
version = "0.3.4"
description = "Parse db/html/json bookmarks file from (Chrome - Firefox - Custom source) and convert it to db/html/json format."
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/radam9/bookmarks-converter"
repository = "https://github.com/radam9/bookmarks-converter"
keywords = [
    "bookmarks", 
    "bookmarks converter", 
    "bookmarks-converter", 
    "bookmarks-parser", 
    "bookmarks parser"
    ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    ]
packages = [
    { include = "bookmarks_converter", from = "src" },
    ]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
SQLAlchemy = "^2.0.0"
importlib-metadata = {version = ">=1,<7", python = "<3.9"}

[tool.poetry.dev-dependencies]
pylint = "^2.12.0"
pytest = "^7.2.0"
black = "^23.1.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.8.2"

[tool.poetry.scripts]
bookmarks-converter = "bookmarks_converter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
