[tool.poetry]
name = "bookmarks-converter"
version = "1.0.2"
description = "Convert browser bookmarks files."
authors = ["Adam Saleh <radam9@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/radam9/bookmarks-converter"
repository = "https://github.com/radam9/bookmarks-converter"
keywords = [
    "bookmarks", 
    "bookmarks converter", 
    "bookmarks-converter", 
    "bookmarks-parser", 
    "bookmarks parser"
    ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    ]
packages = [
    { include = "bookmarks_converter", from = "src" },
    ]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.10.0"
SQLAlchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"
pytest = "^8.3.2"
black = "^24.8.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
bookmarks-converter = "bookmarks_converter.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
